# docs-rag-assistant

./: .gitignore  README.md  pyproject.toml
docs/: demo.tape
eval/: README.md  golden_questions.yaml
src/rag_assistant/: __init__.py  chunker.py  cli.py  embeddings.py  eval_harness.py  generator.py  ingest.py  parsers.py  prompts.py  retriever.py  store.py
tests/: conftest.py  test_ask.py  test_chunker.py  test_embeddings.py  test_eval.py  test_generator.py  test_ingest.py  test_parsers.py  test_prompts.py  test_rag_integration.py  test_retriever.py  test_store.py
tests/fixtures/: sample.md  sample.txt
