[project]
name = "rag-assistant"
version = "0.1.0"
description = "CLI for ingesting local documents into a vector DB and querying with Claude"
readme = "README.md"
authors = [
    { name = "Abdullah Duldul", email = "215817346+Abdullah-Duldul@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "chromadb>=0.6.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "rich>=13.0.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
    "typer>=0.12.0",
]

[project.scripts]
rag = "rag_assistant.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_assistant"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "reportlab>=4.5.1",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
# Required so uv backtracks to package versions that ship Intel Mac wheels.
# Both torch and onnxruntime dropped macosx x86_64 support in their latest releases.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
