[project]
name = "rag-assistant"
version = "0.1.0"
description = "CLI for ingesting local documents into a vector DB and querying with Claude"
readme = "README.md"
authors = [
    { name = "Abdullah Duldul", email = "215817346+Abdullah-Duldul@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "chromadb>=0.6.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "rich>=13.0.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
    "typer>=0.12.0",
]

[project.scripts]
rag = "rag_assistant.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_assistant"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "reportlab>=4.5.1",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: tests that require model download (~80MB)"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
# Required so uv backtracks to package versions that ship Intel Mac wheels.
# torch and onnxruntime dropped macosx x86_64 support in their latest releases.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
# numpy 2.x is runtime-incompatible with torch 2.2.2 (the Intel Mac ceiling):
# torch 2.2 predates numpy 2.x and fails to initialize it, breaking sentence-transformers.
constraint-dependencies = [
    # torch 2.2.2 (Intel Mac ceiling) predates numpy 2.x; runtime breakage.
    "numpy<2.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    # transformers 5.0+ requires torch >= 2.4, which Intel Mac can't reach.
    "transformers<5.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
